<resources>
    <string name="app_name">Sherlock</string>
    <string name="app_subtitle">Password Manager</string>

    <!--    Fragment titles -->
    <string name="home_fragment_title">Sherlock</string>
    <string name="add_edit_fragment_title">Edit</string>
    <string name="detail_fragment_title">Account Details</string>
    <string name="reset_password_fragment_title">Reset Password</string>

    <!--    Shared Preferences keys -->
    <string name="preference_file_key">com.adityaoo7.sherlock.PREFERENCE_FILE_KEY</string>
    <string name="test_preference_file_key">com.adityaoo7.sherlock.TEST_PREFERENCE_FILE_KEY</string>
    <string name="pref_acc_id_key">Verification_Account_Id</string>
    <string name="pref_acc_name_key">Verification_Account_Name</string>
    <string name="pref_acc_user_name_key">Verification_Account_User_Name</string>
    <string name="pref_acc_password_key">Verification_Account_Password</string>
    <string name="pref_acc_uri_key">Verification_Account_Uri</string>
    <string name="pref_acc_note_key">Verification_Account_Note</string>
    <string name="pref_salt_key">Salt_Key</string>
    <string name="pref_auth_state_key">Is_Registered</string>

    <!--    For Add Edit Functionality -->
    <string name="save_success">Account Saved Successfully!</string>
    <string name="empty_account">You cannot save empty account!</string>
    <string name="no_account_found">Account Not found</string>
    <string name="account_decrypt_failed">Failed to Retrieve Account</string>
    <string name="account_encrypt_failed">Failed to Save Account</string>
    <string name="loading_accounts_error">Error while loading accounts</string>

    <string name="account_name_hint">Account Name</string>
    <string name="user_name_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="url_hint">website url</string>
    <string name="note_hint">Add your notes here</string>
    <string name="save_account_content_description">save account</string>

    <!--    Authentication Messages -->
    <string name="wrong_password_pattern">Invalid Password Pattern</string>
    <string name="auth_process_error">Error while processing Authentication</string>
    <string name="incorrect_password">Password Incorrect!</string>
    <string name="auth_success">Authenticated Successfully!</string>
    <string name="register_success">Registered Successfully!</string>
    <string name="re_enter_master_password_hint">Confirm Password</string>
    <string name="enter_master_password_hint">Enter Master Password</string>
    <string name="register_state_not_found">Unable to determine if you\'re registered or not!</string>
    <string name="password_not_match">Re-entered Password don\'t match with original one</string>

    <!--    Authentication screen -->
    <string name="register_heading_text_view">Register</string>
    <string name="login_heading_text_view">Login</string>

    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>


    <!--    Home Screen -->
    <string name="fab_content_description">Add new account button</string>
    <string name="no_accounts_text">No Accounts Found !\nWhy don\'t add one\nby pressing plus button at bottom</string>

    <!--    Detail Screen -->
    <string name="copy_user_name_content_description">copy user name</string>
    <string name="copy_password_content_description">copy password</string>
    <string name="open_url_content_description">open url</string>
    <string name="toggle_view_password_content_description">toggle view password</string>
    <string name="account_detail_transition">account_detail</string>

    <string name="edit_account_content_description">edit account</string>
    <string name="delete_account_content_description">delete account</string>

    <!--    Reset Password Screen -->
    <string name="reset_password_menu_item">Reset Password</string>
    <string name="reset_password_text_view">Reset Password</string>
    <string name="reset_password_button_text">Reset</string>
    <string name="confirm_password_edit_text">Confirm password</string>
    <string name="new_master_password_edit_text">New master password</string>
    <string name="enter_old_password_hint">Enter old password</string>
    <string name="reset_success">Password Reset Successfully!</string>

    <string name="user_name_copied_toast">User name copied!</string>
    <string name="password_copied_toast">Password copied!</string>
    <string name="authenticating_loading_text">Authenticating. Please wait.</string>
    <string name="reset_password_loading_text">Resetting your password.\nPlease do not close application\nas it will result in loss of data.</string>
    <string name="loading_account_details_text">Loading account details.</string>

</resources>