...
            name="viewModel"
            type="com.adityaoo7.sherlock.home.HomeViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeFragment">

        <RelativeLayout
            android:id="@+id/accounts_container_layout"
...
